--- a/application.yml
+++ b/application.yml
@@ -1,13 +1,14 @@
+server:
+  port: 8191
+
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/rentDB?createDatabaseIfNotExist=true
-    username: root
-    password: 123
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/AyeshaPerera1995/spring-cloud-config-store
+          search-paths:
+            - '*service'
 
 
 
